# GoPro-video-data-overlay

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.bat
gopro_overlay/: __init__.py  cli.py  config.py  extract.py  gps_io.py  map_tiles.py  process.py  render.py  video_io.py
